@@ -302,6 +302,9 @@ HISTORY
 
   ++ Bugfixes:
 
+  2016-03-05: Simon Goldschmidt
+  * err.h/.c, sockets.c: ERR_IF is not necessarily a fatal error
+
   2015-11-19: fix by Kerem Hadimli
   * sockets.c: fixed bug #46471: lwip_accept() leaks socket descriptors if new
     netconn was already closed because of peer behavior
